# GenesisV001

./: .gitignore  Cargo.toml  \  pyproject.toml
src/: lib.rs
src/genesisv001/: .env  __init__.py  _core.pyi
